Extension can now launch the app
make extension send commands through the app

--- a/yeelight-chrome-extension/public/manifest.json
+++ b/yeelight-chrome-extension/public/manifest.json
@@ -16,5 +16,6 @@
   },
   "content_security_policy": "script-src 'self' 'sha256-G6kYpOq+OKySW3OTmQOUW4UwhSyeh9BkYeTnGysLO1U='; object-src 'self'",
   "permissions": [
+    "storage"
   ]
 }
