--- a/yeelight-chrome-extension/package.json
+++ b/yeelight-chrome-extension/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "color": "^3.1.2",
+    "lodash.debounce": "^4.0.8",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
