--- a/yeelight-chrome-extension/public/manifest.json
+++ b/yeelight-chrome-extension/public/manifest.json
@@ -4,7 +4,10 @@
   "name": "Yeelight Chrome",
   "description": "This extension is a starting point to create a real Chrome extension",
   "version": "0.0.1",
-
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "browser_action": {
     "default_popup": "index.html",
     "default_title": "Open light controls"
